# hexagons

./: CMakeLists.txt  LICENSE
lib/: hexagon.hpp
test/: test.cpp
